# run-detection

./: .dockerignore  .gitignore  .pylintrc  README.md  codecov.yml  dev_requirements.txt  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  dependency-review.yml  end_to_end.yml  formatting.yml  formatting_and_linting.yml  linting.yml  scorecard.yml  tests.yml  trivy.yml
container/: Dockerfile  liveness.bash  rundetection.D  rundetection.dockerfile
rundetection/: __init__.py  cache.py  exceptions.py  health.py  ingest.py  job_requests.py  memphis_run_detection.py  notifications.py  queue_listener.py  run_detection.py  specifications.py  topic_listener.py
rundetection/ingestion/: __init__.py  extracts.py  ingest.py
rundetection/rules/: __init__.py  common_rules.py  enginx_rules.py  factory.py  gem_rules.py  imat_rules.py  ines_rules.py  inter_rules.py  iris_rules.py  loq_rules.py  mari_rules.py  osiris_rules.py  rule.py  sans_rules.py  tosca_rules.py  vesuvio_rules.py
rundetection/specifications/: iris_specification.json  loq_specification.json  mari_specification.json  osiris_specification.json  tosca_specification.json
scripts/: specification_generator.py
src/: notifications.py  queue_listener.py  run_detection.py
test/: __init__.py  docker-compose.yml  test_cache.py  test_e2e.py  test_health.py  test_ingest.py  test_job_request.py  test_main.py  test_notifier.py  test_queue_listener.py  test_run_detection.py  test_specifications.py  test_topic_listener.py
test/e2e_components/: Dockerfile  pyproject.toml
test/e2e_components/fake_fia_api/: __init__.py  fia_api.py  router.py
test/ingestion/: __init__.py  test_extracts.py  test_ingest.py
test/rules/: __init__.py  test_common_rules.py  test_enginx_rules.py  test_factory.py  test_imat_rules.py  test_inter_rules.py  test_iris_rules.py  test_loq_rules.py  test_mari_rules.py  test_osiris_rules.py  test_sans2d_rules.py  test_tosca_rules.py  test_vesuvio_rules.py
test/test_data/e2e_data/1600007/: IMAT00004217.nxs
test/test_data/e2e_data/1920302/: ALF82301.nxs
test/test_data/e2e_data/NDXENGINX/Instrument/data/cycle_20_01/: ENGINX00299080.nxs
test/test_data/e2e_data/NDXENGINX/Instrument/data/cycle_20_1/: ENGINX00241391.nxs
test/test_data/e2e_data/NDXENGINX/Instrument/logs/journal/: journal_20_1.xml  journal_21_1.xml  journal_22_1.xml
test/test_data/e2e_data/NDXIRIS/Instrument/data/cycle_24_3/: IRIS00103225.nxs
test/test_data/e2e_data/NDXMAR/Instrument/data/cycle_19_4/: MAR27029.nxs
test/test_data/e2e_data/NDXMAR/Instrument/logs/journal/: journal_19_4.xml  journal_22_04.xml
test/test_data/e2e_data/NDXOSIRIS/Instrument/data/cycle_12_2/: OSI98933.nxs
test/test_data/e2e_data/NDXOSIRIS/Instrument/data/cycle_14_1/: OSIRIS00108538.nxs  OSIRIS00108539.nxs
test/test_data/e2e_data/NDXTOSCA/Instrument/data/cycle_19_4/: TSC25234.nxs  TSC25235.nxs  TSC25236.nxs
test/test_data/e2e_data/journal/: journal_25_1.xml
test/test_data/specifications/: enginx_specification.json  imat_specification.json  iris_specification.json  loq_specification.json  mari_specification.json  osiris_specification.json  sans2d_specification.json  tosca_specification.json  vesuvio_specification.json
tools/: specification_generator.py  specification_migration.py
