[project]
name = "run-detection"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "pika==1.3.2",
    "h5py==3.11.0"
]


[project.urls]
"Repository" = "https://github.com/fiaisis/run-detection"

[project.scripts]
run-detection = "rundetection.run_detection:main"

[project.optional-dependencies]
formatting = [
    "black==24.4.2"
]

test = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "requests==2.31.0",
    "pytest-random-order==1.1.1"
]

code-inspection = [
    "pylint==3.2.2",
    "mypy==1.10.0",
    "run-detection[test]"
]

dev = [
    "run-detection[code-inspection]"
]


[tool.setuptools]
packages = ["rundetection", "rundetection.rules", "rundetection.ingestion"]
